--- a/src/DotNetFilter/DotNetFilter.fsproj
+++ b/src/DotNetFilter/DotNetFilter.fsproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Include="Program.fs" />
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="xunit.core" Version="2.3.1" />
+  </ItemGroup>
 </Project>
