--- a/src/DotNetFilter/DotNetFilter.fsproj
+++ b/src/DotNetFilter/DotNetFilter.fsproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Dll.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
